--- a/dev-python/gnome-python/ChangeLog
+++ b/dev-python/gnome-python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/gnome-python
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python/ChangeLog,v 1.55 2006/01/22 20:42:31 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gnome-python/ChangeLog,v 1.56 2006/02/03 23:06:11 gmsoft Exp $
+
+  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> gnome-python-2.12.1.ebuild:
+  Stable on hppa.
 
   22 Jan 2006; <dang@gentoo.org> gnome-python-2.12.1.ebuild:
   Marked stable on amd64 per bug #119634
