--- a/sys-kernel/xen-sources/ChangeLog
+++ b/sys-kernel/xen-sources/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/xen-sources
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xen-sources/ChangeLog,v 1.15 2005/12/26 22:42:21 chrb Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/xen-sources/ChangeLog,v 1.16 2006/02/03 23:08:03 chrb Exp $
+
+*xen-sources-2.6.12.6-r1 (03 Feb 2006)
+
+  03 Feb 2006; <chrb@gentoo.org> +xen-sources-2.6.12.6-r1.ebuild:
+  bump
 
   26 Dec 2005; <chrb@gentoo.org> -xen-sources-2.6.11.12.ebuild:
   Remove xen-2 as bugs are no longer being fixed upstream.
