--- a/app-text/xpdf/ChangeLog
+++ b/app-text/xpdf/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-text/xpdf
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.125 2006/01/28 14:43:26 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.126 2006/02/03 23:40:33 genstef Exp $
+
+*xpdf-3.01-r7 (03 Feb 2006)
+
+  03 Feb 2006; Stefan Schweizer <genstef@gentoo.org> -xpdf-3.00-r8.ebuild,
+  xpdf-3.00-r10.ebuild, -xpdf-3.01.ebuild, -xpdf-3.01-r1.ebuild,
+  -xpdf-3.01-r3.ebuild, -xpdf-3.01-r4.ebuild, -xpdf-3.01-r6.ebuild,
+  +xpdf-3.01-r7.ebuild:
+  Make xpdf use poppler, allows us to cope with security bugs like 120985 by
+  only patching poppler, remove old ebuilds
 
   28 Jan 2006; Simon Stelling <blubb@gentoo.org>
   +files/xpdf-3.00-PathScanner.patch,
