--- a/dev-lang/gauche/ChangeLog
+++ b/dev-lang/gauche/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/gauche
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gauche/ChangeLog,v 1.21 2005/11/16 14:07:08 wolf31o2 Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gauche/ChangeLog,v 1.22 2006/02/03 23:45:43 agriffis Exp $
+
+  03 Feb 2006; Aron Griffis <agriffis@gentoo.org> gauche-0.8.6-r1.ebuild:
+  Mark 0.8.6-r1 stable on ia64
 
   16 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   gauche-0.8.6-r1.ebuild:
