--- a/games-arcade/koules/ChangeLog
+++ b/games-arcade/koules/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/koules
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/koules/ChangeLog,v 1.8 2006/01/12 20:37:33 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/koules/ChangeLog,v 1.9 2006/02/03 23:58:14 mr_bones_ Exp $
+
+  03 Feb 2006; Michael Sterrett <mr_bones_@gentoo.org> koules-1.4-r1.ebuild:
+  modular X deps - patch from Tupone Alfredo via bug #121481
 
   12 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> -files/1.4-gcc3.patch,
   koules-1.4-r1.ebuild:
