--- a/dev-perl/CORBA-ORBit/ChangeLog
+++ b/dev-perl/CORBA-ORBit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/CORBA-ORBit
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CORBA-ORBit/ChangeLog,v 1.14 2006/01/31 20:10:06 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CORBA-ORBit/ChangeLog,v 1.15 2006/02/04 00:18:06 agriffis Exp $
+
+  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> CORBA-ORBit-0.4.7.ebuild:
+  Mark 0.4.7 stable on ia64
 
   31 Jan 2006; Aron Griffis <agriffis@gentoo.org> CORBA-ORBit-0.4.7.ebuild:
   Mark 0.4.7 stable on alpha
