--- a/www-apps/joomla/ChangeLog
+++ b/www-apps/joomla/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/joomla
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/joomla/ChangeLog,v 1.20 2008/04/27 06:22:31 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/joomla/ChangeLog,v 1.21 2008/07/31 21:04:08 wrobel Exp $
+
+*joomla-1.5.5 (31 Jul 2008)
+
+  31 Jul 2008; wrobel@gentoo.org -joomla-1.5.3.ebuild, +joomla-1.5.5.ebuild:
+  Bumped to 1.5.5 in response to sec issue #231579.
 
 *joomla-1.5.3 (27 Apr 2008)
 
