--- a/profiles/arch/sparc/ChangeLog
+++ b/profiles/arch/sparc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/sparc profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.18 2008/07/16 21:16:16 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.19 2008/07/31 21:10:20 armin76 Exp $
+
+  31 Jul 2008; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Use.mask reordering
 
   16 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> use.mask:
   Un-use.mask tordns
