--- a/profiles/arch/sparc/ChangeLog
+++ b/profiles/arch/sparc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/sparc profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.20 2008/07/31 21:12:18 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.21 2008/07/31 21:14:41 armin76 Exp $
+
+  31 Jul 2008; Raúl Porcel <armin76@gentoo.org> package.use.mask:
+  Reorder package.use.mask
 
   31 Jul 2008; Raúl Porcel <armin76@gentoo.org> package.use.mask, use.mask:
   Move webkit to use.mask
