--- a/media-sound/sound-juicer/ChangeLog
+++ b/media-sound/sound-juicer/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/sound-juicer
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.142 2008/07/30 22:02:13 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.143 2008/07/31 21:23:45 eva Exp $
+
+*sound-juicer-2.22.0-r1 (31 Jul 2008)
+
+  31 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +files/sound-juicer-2.22.0-sj-handle-uri.patch,
+  +sound-juicer-2.22.0-r1.ebuild:
+  bump to r1, add patch to handle uris, bug #229745.
 
   30 Jul 2008; Brent Baude <ranger@gentoo.org> sound-juicer-2.22.0.ebuild:
   Marking sound-juicer-2.22.0 ppc stable for bug 229709
