--- a/gnome-base/gnome-applets/ChangeLog
+++ b/gnome-base/gnome-applets/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.265 2008/07/30 21:59:59 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.266 2008/07/31 21:33:51 eva Exp $
+
+  31 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-applets-2.22.0.ebuild, -gnome-applets-2.22.1.ebuild,
+  -gnome-applets-2.22.2.ebuild:
+  remove old revisions.
 
   30 Jul 2008; Brent Baude <ranger@gentoo.org> gnome-applets-2.22.3.ebuild:
   Marking gnome-applets-2.22.3 ppc stable for bug 229709
