--- a/gnome-base/gnome-control-center/ChangeLog
+++ b/gnome-base/gnome-control-center/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/gnome-control-center
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.5 2008/07/30 22:01:35 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-control-center/ChangeLog,v 1.6 2008/07/31 21:59:43 eva Exp $
+
+  31 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +files/gnome-control-center-2.22.2.1-caps-esc-bindable.patch,
+  -gnome-control-center-2.22.1.ebuild, gnome-control-center-2.22.2.1.ebuild:
+  gnome-control-center-2.22.2.1.ebuild:
+  Add patch to avoid binding ESC, bug #230153.
+  Clean up old revision.
 
   30 Jul 2008; Brent Baude <ranger@gentoo.org>
   gnome-control-center-2.22.2.1.ebuild:
