--- a/sci-geosciences/merkaartor/ChangeLog
+++ b/sci-geosciences/merkaartor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-geosciences/merkaartor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/merkaartor/ChangeLog,v 1.4 2008/07/28 21:37:31 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/merkaartor/ChangeLog,v 1.5 2008/07/31 22:28:57 hanno Exp $
+
+  31 Jul 2008; Hanno Boeck <hanno@gentoo.org> merkaartor-9999.ebuild:
+  Add localization support to 9999 ebuild.
 
   28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> merkaartor-0.0.9.ebuild,
   merkaartor-0.0.10.ebuild:
