--- a/media-plugins/gst-plugins-farsight/ChangeLog
+++ b/media-plugins/gst-plugins-farsight/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-farsight
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-farsight/ChangeLog,v 1.16 2008/05/14 18:57:37 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-farsight/ChangeLog,v 1.17 2008/07/31 22:58:51 tester Exp $
+
+*gst-plugins-farsight-0.12.9 (31 Jul 2008)
+
+  31 Jul 2008; Olivier Crête <tester@gentoo.org>
+  -gst-plugins-farsight-0.12.7.ebuild, +gst-plugins-farsight-0.12.9.ebuild:
+  Version bump
 
 *gst-plugins-farsight-0.12.8 (14 May 2008)
 
