--- a/x11-wm/awesome/ChangeLog
+++ b/x11-wm/awesome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/awesome
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.23 2008/07/29 16:21:00 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.24 2008/08/01 01:31:20 gentoofan23 Exp $
+
+  01 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
+  awesome-2.3.2.ebuild:
+  stable amd64, bug 233293
 
 *awesome-2.3.3 (29 Jul 2008)
 
