--- a/www-apps/joomla/ChangeLog
+++ b/www-apps/joomla/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/joomla
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/joomla/ChangeLog,v 1.21 2008/07/31 21:04:08 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/joomla/ChangeLog,v 1.22 2008/08/01 04:30:01 wrobel Exp $
+
+  01 Aug 2008; wrobel@gentoo.org joomla-1.5.5.ebuild:
+  Require PHP with xml (Bug #232574).
 
 *joomla-1.5.5 (31 Jul 2008)
 
