--- a/dev-perl/perltidy/ChangeLog
+++ b/dev-perl/perltidy/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/perltidy
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.34 2007/11/10 19:14:13 drac Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/perltidy/ChangeLog,v 1.35 2008/08/01 08:05:55 tove Exp $
+
+*perltidy-20071205 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +perltidy-20071205.ebuild:
+  Version bump
 
   10 Nov 2007; Samuli Suominen <drac@gentoo.org> perltidy-20070508.ebuild:
   amd64 stable
