--- a/games-strategy/heroes3/ChangeLog
+++ b/games-strategy/heroes3/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/heroes3
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/heroes3/ChangeLog,v 1.19 2008/03/12 19:29:16 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/heroes3/ChangeLog,v 1.20 2008/08/01 08:48:38 wolf31o2 Exp $
+
+  01 Aug 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
+  Removing myself as maintainer since I'm retiring.
 
   12 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org>
   heroes3-1.3.1a-r2.ebuild:
