--- a/games-strategy/savage-bin/ChangeLog
+++ b/games-strategy/savage-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/savage-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/savage-bin/ChangeLog,v 1.5 2008/03/11 06:18:58 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/savage-bin/ChangeLog,v 1.6 2008/08/01 08:49:07 wolf31o2 Exp $
+
+  01 Aug 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
+  Removing myself as maintainer since I'm retiring.
 
   11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   savage-bin-2.00e.ebuild:
