--- a/dev-perl/Class-MethodMaker/ChangeLog
+++ b/dev-perl/Class-MethodMaker/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Class-MethodMaker
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MethodMaker/ChangeLog,v 1.50 2008/07/26 21:55:55 the_paya Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MethodMaker/ChangeLog,v 1.51 2008/08/01 09:21:26 tove Exp $
+
+*Class-MethodMaker-2.12 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +Class-MethodMaker-2.12.ebuild:
+  Version bump
 
   26 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
   Class-MethodMaker-2.11.ebuild:
