--- a/dev-perl/Class-MethodMaker/ChangeLog
+++ b/dev-perl/Class-MethodMaker/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-MethodMaker
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MethodMaker/ChangeLog,v 1.51 2008/08/01 09:21:26 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MethodMaker/ChangeLog,v 1.52 2008/08/01 09:25:12 tove Exp $
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  -Class-MethodMaker-2.07-r2.ebuild, -Class-MethodMaker-2.08.ebuild,
+  -Class-MethodMaker-2.09.ebuild:
+  Cleanup
 
 *Class-MethodMaker-2.12 (01 Aug 2008)
 
