--- a/dev-perl/Class-Inspector/ChangeLog
+++ b/dev-perl/Class-Inspector/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Class-Inspector
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.51 2008/06/13 16:48:43 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.52 2008/08/01 09:32:19 tove Exp $
+
+*Class-Inspector-1.23 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +Class-Inspector-1.23.ebuild:
+  Version bump
 
   13 Jun 2008; Raúl Porcel <armin76@gentoo.org>
   Class-Inspector-1.22.ebuild:
