--- a/dev-perl/Class-Inspector/ChangeLog
+++ b/dev-perl/Class-Inspector/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Class-Inspector
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.52 2008/08/01 09:32:19 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Inspector/ChangeLog,v 1.53 2008/08/01 09:34:46 tove Exp $
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  -Class-Inspector-1.13.ebuild, -Class-Inspector-1.16.ebuild:
+  Cleanup
 
 *Class-Inspector-1.23 (01 Aug 2008)
 
