--- a/dev-perl/Pod-Simple/ChangeLog
+++ b/dev-perl/Pod-Simple/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Pod-Simple
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Simple/ChangeLog,v 1.39 2008/06/06 08:53:08 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Simple/ChangeLog,v 1.40 2008/08/01 09:40:45 tove Exp $
+
+*Pod-Simple-3.07 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Pod-Simple-3.07.ebuild:
+  Version bump
 
   06 Jun 2008; Alexis Ballier <aballier@gentoo.org> Pod-Simple-3.05.ebuild:
   keyword ~sparc-fbsd
