--- a/dev-java/eclipse-ecj/ChangeLog
+++ b/dev-java/eclipse-ecj/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/eclipse-ecj
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.43 2008/07/21 22:07:25 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/eclipse-ecj/ChangeLog,v 1.44 2008/08/01 09:49:11 elvanor Exp $
+
+*eclipse-ecj-3.4-r2 (01 Aug 2008)
+
+  01 Aug 2008; Jean-Noël Rivasseau <elvanor@gentoo.org> +files/ecj-3.4,
+  +eclipse-ecj-3.4-r2.ebuild:
+  Bumping eclipse-ecj-3.4, moving from overlay to tree.
 
 *eclipse-ecj-3.3.0-r3 (21 Jul 2008)
 *eclipse-ecj-3.2.2-r1 (21 Jul 2008)
