--- a/dev-java/ant-eclipse-ecj/ChangeLog
+++ b/dev-java/ant-eclipse-ecj/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/ant-eclipse-ecj
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-eclipse-ecj/ChangeLog,v 1.8 2008/03/22 00:54:20 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-eclipse-ecj/ChangeLog,v 1.9 2008/08/01 09:52:56 elvanor Exp $
+
+*ant-eclipse-ecj-3.4 (01 Aug 2008)
+
+  01 Aug 2008; Jean-Noël Rivasseau <elvanor@gentoo.org>
+  +files/compiler-settings-3.4, +ant-eclipse-ecj-3.4.ebuild:
+  Moving 3.4 to main tree from overlay.
 
   22 Mar 2008; Markus Meier <maekke@gentoo.org>
   ant-eclipse-ecj-3.3.0-r1.ebuild:
