--- a/dev-perl/Pod-Tests/ChangeLog
+++ b/dev-perl/Pod-Tests/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Pod-Tests
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Tests/ChangeLog,v 1.14 2007/01/19 15:30:04 mcummings Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Pod-Tests/ChangeLog,v 1.15 2008/08/01 10:07:57 tove Exp $
+
+*Pod-Tests-1.19 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Pod-Tests-1.19.ebuild:
+  Version bump
 
   19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Pod-Tests-0.18.ebuild:
