--- a/sys-apps/kexec-tools/ChangeLog
+++ b/sys-apps/kexec-tools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/kexec-tools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.19 2008/03/21 09:43:54 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.20 2008/08/01 10:10:04 zzam Exp $
+
+*kexec-tools-1.101-r5 (01 Aug 2008)
+
+  01 Aug 2008; Matthias Schwarzott <zzam@gentoo.org> files/kexec.init,
+  +kexec-tools-1.101-r5.ebuild:
+  Fixed init script to detect reboot also with baselayout-2, Bug #218268.
 
   21 Mar 2008; Stefan Schweizer <genstef@gentoo.org>
   -files/kexec-tools-9999-LDFLAGS.patch, files/kexec.init,
