--- a/dev-perl/Class-Member/ChangeLog
+++ b/dev-perl/Class-Member/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-Member
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Member/ChangeLog,v 1.2 2007/11/19 19:42:48 flameeyes Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Member/ChangeLog,v 1.3 2008/08/01 10:15:25 tove Exp $
+
+*Class-Member-1.5 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Class-Member-1.5.ebuild:
+  Version bump
 
   19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
   Class-Member-1.3.ebuild:
