--- a/dev-perl/class-returnvalue/ChangeLog
+++ b/dev-perl/class-returnvalue/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for dev-perl/class-returnvalue
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/class-returnvalue/ChangeLog,v 1.19 2007/01/15 14:59:43 mcummings Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/class-returnvalue/ChangeLog,v 1.20 2008/08/01 10:28:42 tove Exp $
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +class-returnvalue-0.55.ebuild:
+  Version bump
+
+*class-returnvalue-0.55 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +class-returnvalue-0.55.ebuild:
+  Version bump
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   class-returnvalue-0.52.ebuild, class-returnvalue-0.53.ebuild:
