--- a/gnome-extra/gnome-games/ChangeLog
+++ b/gnome-extra/gnome-games/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gnome-games
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.242 2008/07/30 22:03:00 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games/ChangeLog,v 1.243 2008/08/01 10:31:22 eva Exp $
+
+  01 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org> Manifest:
+  fix digest that was broken due to local incomplete download, bug #233299.
 
   30 Jul 2008; Brent Baude <ranger@gentoo.org> gnome-games-2.22.2.1.ebuild:
   Marking gnome-games-2.22.2.1 ppc stable for bug 229709
