--- a/dev-perl/Cgi-Simple/ChangeLog
+++ b/dev-perl/Cgi-Simple/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Cgi-Simple
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cgi-Simple/ChangeLog,v 1.40 2007/11/10 12:10:41 drac Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cgi-Simple/ChangeLog,v 1.41 2008/08/01 10:57:13 tove Exp $
+
+*Cgi-Simple-1.1.05 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Cgi-Simple-1.1.05.ebuild:
+  Version bump
 
   10 Nov 2007; Samuli Suominen <drac@gentoo.org> Cgi-Simple-1.0.ebuild:
   amd64 stable
