--- a/games-sports/stormbaancoureur/ChangeLog
+++ b/games-sports/stormbaancoureur/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-sports/stormbaancoureur
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/stormbaancoureur/ChangeLog,v 1.12 2008/05/29 20:37:56 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-sports/stormbaancoureur/ChangeLog,v 1.13 2008/08/01 14:20:54 mr_bones_ Exp $
+
+*stormbaancoureur-2.1.5 (01 Aug 2008)
+
+  01 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +stormbaancoureur-2.1.5.ebuild:
+  version bump
 
   29 May 2008; Michael Sterrett <mr_bones_@gentoo.org>
   stormbaancoureur-2.1.4.ebuild:
