--- a/dev-util/cunit/ChangeLog
+++ b/dev-util/cunit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cunit
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cunit/ChangeLog,v 1.19 2008/05/10 08:07:51 jmglov Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cunit/ChangeLog,v 1.20 2008/08/01 14:41:37 hattya Exp $
+
+  01 Aug 2008; Akinori Hattori <hattya@gentoo.org> cunit-2.1.ebuild:
+  stable on x86.
 
   10 May 2008; Josh Glover <jmglov@gentoo.org> cunit-2.1.ebuild:
   Bug # 221101 : re-adding KEYWORDS from cunit-2.0
