--- a/dev-db/cdb/ChangeLog
+++ b/dev-db/cdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/cdb
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.43 2008/01/17 18:50:17 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.44 2008/08/01 15:05:00 hattya Exp $
+
+  01 Aug 2008; Akinori Hattori <hattya@gentoo.org> cdb-0.75-r2.ebuild:
+  fixes bug #210730.
 
   17 Jan 2008; Fabian Groffen <grobian@gentoo.org> cdb-0.75-r2.ebuild:
   Dropped ppc-macos keyword, see you in prefix
