--- a/dev-db/tinycdb/ChangeLog
+++ b/dev-db/tinycdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/tinycdb
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/tinycdb/ChangeLog,v 1.15 2007/09/09 12:28:08 hattya Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/tinycdb/ChangeLog,v 1.16 2008/08/01 15:03:29 hattya Exp $
+
+  01 Aug 2008; Akinori Hattori <hattya@gentoo.org> tinycdb-0.76.ebuild:
+  fixes bug #210730.
 
   09 Sep 2007; Akinori Hattori <hattya@gentoo.org> tinycdb-0.76.ebuild:
   stable on ia64.
