--- a/media-gfx/sane-backends/ChangeLog
+++ b/media-gfx/sane-backends/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/sane-backends
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/sane-backends/ChangeLog,v 1.144 2008/06/17 01:19:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/sane-backends/ChangeLog,v 1.145 2008/08/01 15:18:23 phosphan Exp $
+
+*sane-backends-1.0.19-r2 (01 Aug 2008)
+
+  01 Aug 2008; Patrick Kursawe <phosphan@gentoo.org>
+  +files/epson2fixes-1.0.19.patch, +sane-backends-1.0.19-r2.ebuild:
+  Included epson2 related fixes from SANE cvs
 
   17 Jun 2008; Jeroen Roovers <jer@gentoo.org>
   sane-backends-1.0.19-r1.ebuild:
