--- a/app-portage/portpeek/ChangeLog
+++ b/app-portage/portpeek/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-portage/portpeek
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.7 2008/06/26 17:29:40 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portpeek/ChangeLog,v 1.8 2008/08/01 15:21:15 mpagano Exp $
+
+*portpeek-1.6.5 (01 Aug 2008)
+
+  01 Aug 2008; Mike Pagano <mpagano@gentoo.org> +portpeek-1.6.5.ebuild:
+  Version bump
 
   26 Jun 2008; Ferris McCormick <fmccor@gentoo.org> portpeek-1.5.7.ebuild,
   portpeek-1.6.1.ebuild:
