--- a/www-client/opera/ChangeLog
+++ b/www-client/opera/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.268 2008/07/29 22:00:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.269 2008/08/01 15:28:02 jer Exp $
+
+*opera-9.52_pre2084 (01 Aug 2008)
+
+  01 Aug 2008; Jeroen Roovers <jer@gentoo.org> +opera-9.52_pre2084.ebuild:
+  Version bump
+  <http://my.opera.com/desktopteam/blog/2008/08/01/9-52-august-snapshot>.
 
   29 Jul 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
   Describe local USE flags for GLEP 56.
