--- a/net-misc/memcached/ChangeLog
+++ b/net-misc/memcached/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/memcached
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.71 2008/05/26 08:52:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.72 2008/08/01 15:56:46 caleb Exp $
+
+*memcached-1.2.6 (01 Aug 2008)
+
+  01 Aug 2008; Caleb Tennis <caleb@gentoo.org> +files/1.2.6/conf,
+  +files/1.2.6/init, +memcached-1.2.6.ebuild:
+  bump to new version
 
   26 May 2008; Raúl Porcel <armin76@gentoo.org> memcached-1.2.5.ebuild:
   alpha/ia64/sparc stable wrt #223371
