--- a/net-misc/wicd/ChangeLog
+++ b/net-misc/wicd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/wicd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.1 2008/07/31 18:08:54 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.2 2008/08/01 16:17:55 darkside Exp $
+
+  01 Aug 2008; Jeremy Olexa <darkside@gentoo.org>
+  +files/wicd-1.5.0_rc11-init.d, -files/wicd-1.5.0_rc5-init.d,
+  wicd-1.5.0_rc11.ebuild:
+  Actually install the init file (renamed file) and added die message so this
+  won't happen in the future. Fixes bug #233616
 
 *wicd-1.5.0_rc11 (31 Jul 2008)
 *wicd-1.4.2 (31 Jul 2008)
