--- a/dev-python/sphinx/ChangeLog
+++ b/dev-python/sphinx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sphinx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.5 2008/08/01 06:51:29 neurogeek Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.6 2008/08/01 16:47:52 pythonhead Exp $
+
+  01 Aug 2008; Rob Cakebread <pythonhead@gentoo.org> -sphinx-0.4.2.ebuild:
+  Dropped ia64 and ppc until dev-python/nose gets keyworded. bug #233554
 
 *sphinx-0.4.2 (01 Aug 2008)
 
