--- a/perl-core/Math-BigInt/ChangeLog
+++ b/perl-core/Math-BigInt/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Math-BigInt
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigInt/ChangeLog,v 1.47 2008/05/14 20:32:14 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigInt/ChangeLog,v 1.48 2008/08/01 16:57:48 tove Exp $
+
+*Math-BigInt-1.89 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Math-BigInt-1.89.ebuild:
+  Version bump
 
   14 May 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
   amd64 stable, bug #211616
