--- a/perl-core/Math-BigRat/ChangeLog
+++ b/perl-core/Math-BigRat/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Math-BigRat
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigRat/ChangeLog,v 1.15 2008/03/28 06:48:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigRat/ChangeLog,v 1.16 2008/08/01 16:56:08 tove Exp $
+
+*Math-BigRat-0.22 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +Math-BigRat-0.22.ebuild:
+  Version bump
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Math-BigRat-0.19.ebuild:
   Stable for HPPA too.
