--- a/perl-core/bignum/ChangeLog
+++ b/perl-core/bignum/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/bignum
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/bignum/ChangeLog,v 1.16 2008/03/28 06:51:20 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/bignum/ChangeLog,v 1.17 2008/08/01 16:54:37 tove Exp $
+
+*bignum-0.23 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org> +bignum-0.23.ebuild:
+  Version bump
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> bignum-0.21.ebuild:
   Stable for HPPA too.
