--- a/virtual/perl-Math-BigInt/ChangeLog
+++ b/virtual/perl-Math-BigInt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Math-BigInt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Math-BigInt/ChangeLog,v 1.25 2008/05/14 20:30:46 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Math-BigInt/ChangeLog,v 1.26 2008/08/01 16:59:07 tove Exp $
+
+*perl-Math-BigInt-1.89 (01 Aug 2008)
+
+  01 Aug 2008; Torsten Veller <tove@gentoo.org>
+  +perl-Math-BigInt-1.89.ebuild:
+  Version bump
 
   14 May 2008; Markus Meier <maekke@gentoo.org>
   perl-Math-BigInt-1.87.ebuild:
