--- a/www-apps/wordpress/ChangeLog
+++ b/www-apps/wordpress/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/wordpress
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.92 2008/04/27 06:03:25 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.93 2008/08/01 17:24:58 wrobel Exp $
+
+*wordpress-2.6 (01 Aug 2008)
+
+  01 Aug 2008; wrobel@gentoo.org +wordpress-2.6.ebuild:
+  Added wordpress-2.6
 
 *wordpress-2.5.1 (27 Apr 2008)
 
