--- a/net-p2p/qbittorrent/ChangeLog
+++ b/net-p2p/qbittorrent/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-p2p/qbittorrent
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.40 2008/07/28 21:35:35 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.41 2008/08/01 17:32:27 armin76 Exp $
+
+*qbittorrent-1.2.0_beta1 (01 Aug 2008)
+*qbittorrent-1.1.1 (01 Aug 2008)
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
+  -qbittorrent-1.1.0_rc2.ebuild, +qbittorrent-1.1.1.ebuild,
+  +qbittorrent-1.2.0_beta1.ebuild:
+  Version bump
 
   28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> qbittorrent-0.9.3.ebuild:
   QA: Get rid of deprecated qt4_min_version().
