--- a/dev-python/dbus-python/ChangeLog
+++ b/dev-python/dbus-python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/dbus-python
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/dbus-python/ChangeLog,v 1.36 2008/07/28 15:58:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/dbus-python/ChangeLog,v 1.37 2008/08/01 17:54:40 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> dbus-python-0.82.4.ebuild:
+  Stable on ppc wrt bug 212244
 
   28 Jul 2008; Raúl Porcel <armin76@gentoo.org> dbus-python-0.82.4.ebuild:
   alpha/ia64/x86 stable wrt #212244
