--- a/net-mail/dovecot/ChangeLog
+++ b/net-mail/dovecot/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.174 2008/08/01 17:51:02 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.175 2008/08/01 17:57:23 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> dovecot-1.0.15-r1.ebuild,
+  dovecot-1.1.1-r1.ebuild:
+  alpha/x86 stable wrt #231494
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> dovecot-1.0.15-r1.ebuild,
   dovecot-1.1.1-r1.ebuild:
