--- a/games-misc/fortune-mod-firefly/ChangeLog
+++ b/games-misc/fortune-mod-firefly/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/fortune-mod-firefly
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.4 2007/07/24 17:08:44 mr_bones_ Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.5 2008/08/01 17:58:03 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> fortune-mod-firefly-2.1.1.ebuild:
+  Stable on ppc wrt bug 233442
 
 *fortune-mod-firefly-2.1.1 (24 Jul 2007)
 
