--- a/games-mud/kmuddy/ChangeLog
+++ b/games-mud/kmuddy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-mud/kmuddy
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-mud/kmuddy/ChangeLog,v 1.18 2008/01/24 05:50:25 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-mud/kmuddy/ChangeLog,v 1.19 2008/08/01 17:58:12 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> kmuddy-0.8.ebuild:
+  x86 stable wrt #233441
 
   24 Jan 2008; Michael Sterrett <mr_bones_@gentoo.org>
   +files/kmuddy-0.8-idle-crash.patch, kmuddy-0.8.ebuild:
